AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = Resources MapGuideCommon.vcproj MapGuideCommon.rc

lib_LTLIBRARIES = libMgMapGuideCommon.la

libMgMapGuideCommon_la_SOURCES = \
  MapGuideCommonBuild.cpp

include_SOURCES = \
  Controller/Controller.cpp \
  Controller/DwfController.cpp \
  Controller/HtmlController.cpp \
  Exception/AllProviderConnectionsUsedException.cpp \
  Exception/AuthenticationFailedException.cpp \
  Exception/ConnectionFailedException.cpp \
  Exception/ConnectionNotOpenException.cpp \
  Exception/DbException.cpp \
  Exception/DbXmlException.cpp \
  Exception/DuplicateGroupException.cpp \
  Exception/DuplicateNameException.cpp \
  Exception/DuplicateParameterException.cpp \
  Exception/DuplicateRepositoryException.cpp \
  Exception/DuplicateRoleException.cpp \
  Exception/DuplicateServerException.cpp \
  Exception/DuplicateSessionException.cpp \
  Exception/DuplicateUserException.cpp \
  Exception/DwfException.cpp \
  Exception/DwfSectionNotFoundException.cpp \
  Exception/DwfSectionResourceNotFoundException.cpp \
  Exception/EndOfStreamException.cpp \
  Exception/EvaluationExpiredException.cpp \
  Exception/GroupNotFoundException.cpp \
  Exception/InvalidDwfPackageException.cpp \
  Exception/InvalidDwfSectionException.cpp \
  Exception/InvalidFeatureSourceException.cpp \
  Exception/InvalidIpAddressException.cpp \
  Exception/InvalidLicenseException.cpp \
  Exception/InvalidLogEntryException.cpp \
  Exception/InvalidOperationVersionException.cpp \
  Exception/InvalidPasswordException.cpp \
  Exception/InvalidPrintLayoutFontSizeUnitsException.cpp \
  Exception/InvalidPrintLayoutPositionUnitsException.cpp \
  Exception/InvalidPrintLayoutSizeUnitsException.cpp \
  Exception/InvalidSerialNumberException.cpp \
  Exception/InvalidServerNameException.cpp \
  Exception/LicenseException.cpp \
  Exception/LicenseExpiredException.cpp \
  Exception/LogOpenFailedException.cpp \
  Exception/OperationProcessingException.cpp \
  Exception/ParameterNotFoundException.cpp \
  Exception/PathTooLongException.cpp \
  Exception/PermissionDeniedException.cpp \
  Exception/PortNotAvailableException.cpp \
  Exception/PrintToScaleModeNotSelectedException.cpp \
  Exception/RasterTransformationNotSupportedException.cpp \
  Exception/RepositoryCreationFailedException.cpp \
  Exception/RepositoryNotFoundException.cpp \
  Exception/RepositoryNotOpenException.cpp \
  Exception/RepositoryOpenFailedException.cpp \
  Exception/RoleNotFoundException.cpp \
  Exception/ServerNotFoundException.cpp \
  Exception/ServerNotOnlineException.cpp \
  Exception/SessionExpiredException.cpp \
  Exception/SessionNotFoundException.cpp \
  Exception/StylizeLayerFailedException.cpp \
  Exception/UnauthorizedAccessException.cpp \
  Exception/UnsupportedProviderThreadModelException.cpp \
  Exception/UriFormatException.cpp \
  MapLayer/Layer.cpp \
  MapLayer/Map.cpp \
  MapLayer/Selection.cpp \
  Net/IOperationHandler.cpp \
  Services/Command.cpp \
  Services/ConnectionProperties.cpp \
  Services/CustomLogoInfo.cpp \
  Services/CustomTextInfo.cpp \
  Services/DrawingDefs.cpp \
  Services/DrawingService.cpp \
  Services/DwfVersion.cpp \
  Services/FeatureInformation.cpp \
  Services/ImageFormats.cpp \
  Services/KmlDefs.cpp \
  Services/KmlService.cpp \
  Services/Layout.cpp \
  Services/MappingDefs.cpp \
  Services/MappingService.cpp \
  Services/MapPlot.cpp \
  Services/MapPlotCollection.cpp \
  Services/PackageStatusInformation.cpp \
  Services/PlotSpecification.cpp \
  Services/PrintLayout.cpp \
  Services/ProxyDataReader.cpp \
  Services/ProxyDrawingService.cpp \
  Services/ProxyFeatureReader.cpp \
  Services/ProxyFeatureService.cpp \
  Services/ProxyGwsFeatureReader.cpp \
  Services/ProxyKmlService.cpp \
  Services/ProxyMappingService.cpp \
  Services/ProxyRenderingService.cpp \
  Services/ProxyResourceService.cpp \
  Services/ProxySqlDataReader.cpp \
  Services/ProxyTileService.cpp \
  Services/RenderingDefs.cpp \
  Services/RenderingOptions.cpp \
  Services/RenderingService.cpp \
  Services/ServerAdmin.cpp \
  Services/ServerAdminDefs.cpp \
  Services/ServerConnection.cpp \
  Services/ServerConnectionImp.cpp \
  Services/ServerConnectionPool.cpp \
  Services/ServerConnectionStack.cpp \
  Services/ServerInformation.cpp \
  Services/Site.cpp \
  Services/SiteManager.cpp \
  Services/SiteInfo.cpp \
  Services/SiteConnection.cpp \
  Services/TileDefs.cpp \
  Services/TileService.cpp \
  Services/UnitType.cpp \
  System/ConfigProperties.cpp \
  System/MapGuideCommonFactory.cpp \
  System/MapGuideStream.cpp \
  System/UserInformation.cpp  \
  System/CryptographyManager.cpp \
  Util/IpUtil.cpp

noinst_HEADERS = $(include_SOURCES) \
  MapGuideCommon.h \
  Controller/Controller.h \
  Controller/DwfController.h \
  Controller/HtmlController.h \
  Exception/AllProviderConnectionsUsedException.h \
  Exception/AuthenticationFailedException.h \
  Exception/ConnectionFailedException.h \
  Exception/ConnectionNotOpenException.h \
  Exception/DbException.h \
  Exception/DbXmlException.h \
  Exception/DuplicateGroupException.h \
  Exception/DuplicateNameException.h \
  Exception/DuplicateParameterException.h \
  Exception/DuplicateRepositoryException.h \
  Exception/DuplicateRoleException.h \
  Exception/DuplicateServerException.h \
  Exception/DuplicateSessionException.h \
  Exception/DuplicateUserException.h \
  Exception/DwfException.h \
  Exception/DwfSectionNotFoundException.h \
  Exception/DwfSectionResourceNotFoundException.h \
  Exception/EndOfStreamException.h \
  Exception/EvaluationExpiredException.h \
  Exception/GroupNotFoundException.h \
  Exception/InvalidDwfPackageException.h \
  Exception/InvalidDwfSectionException.h \
  Exception/InvalidFeatureSourceException.h \
  Exception/InvalidIpAddressException.h \
  Exception/InvalidLicenseException.h \
  Exception/InvalidLogEntryException.h \
  Exception/InvalidOperationVersionException.h \
  Exception/InvalidPasswordException.h \
  Exception/InvalidPrintLayoutFontSizeUnitsException.h \
  Exception/InvalidPrintLayoutPositionUnitsException.h \
  Exception/InvalidPrintLayoutSizeUnitsException.h \
  Exception/InvalidSerialNumberException.h \
  Exception/InvalidServerNameException.h \
  Exception/LicenseException.h \
  Exception/LicenseExpiredException.h \
  Exception/LogOpenFailedException.h \
  Exception/OperationProcessingException.h \
  Exception/ParameterNotFoundException.h \
  Exception/PathTooLongException.h \
  Exception/PermissionDeniedException.h \
  Exception/PortNotAvailableException.h \
  Exception/PrintToScaleModeNotSelectedException.h \
  Exception/RasterTransformationNotSupportedException.h \
  Exception/RepositoryCreationFailedException.h \
  Exception/RepositoryNotFoundException.h \
  Exception/RepositoryNotOpenException.h \
  Exception/RepositoryOpenFailedException.h \
  Exception/RoleNotFoundException.h \
  Exception/ServerNotFoundException.h \
  Exception/ServerNotOnlineException.h \
  Exception/SessionExpiredException.h \
  Exception/SessionNotFoundException.h \
  Exception/StylizeLayerFailedException.h \
  Exception/UnauthorizedAccessException.h \
  Exception/UnsupportedProviderThreadModelException.h \
  Exception/UriFormatException.h \
  MapLayer/Layer.h \
  MapLayer/Map.h \
  MapLayer/Selection.h \
  Net/IOperationHandler.h \
  Services/Command.h \
  Services/ConnectionProperties.h \
  Services/CustomLogoInfo.h \
  Services/CustomTextInfo.h \
  Services/DrawingDefs.h \
  Services/DrawingService.h \
  Services/DwfVersion.h \
  Services/FeatureInformation.h \
  Services/ImageFormats.h \
  Services/KmlDefs.h \
  Services/KmlService.h \
  Services/Layout.h \
  Services/MappingDefs.h \
  Services/MappingService.h \
  Services/MapPlot.h \
  Services/MapPlotCollection.h \
  Services/MapPlotInstruction.h \
  Services/PackageStatusInformation.h \
  Services/PlotSpecification.h \
  Services/PrintLayout.h \
  Services/ProxyDataReader.h \
  Services/ProxyDrawingService.h \
  Services/ProxyFeatureReader.h \
  Services/ProxyFeatureService.h \
  Services/ProxyGwsFeatureReader.h \
  Services/ProxyKmlService.h \
  Services/ProxyMappingService.h \
  Services/ProxyRenderingService.h \
  Services/ProxyResourceService.h \
  Services/ProxySqlDataReader.h \
  Services/ProxyTileService.h \
  Services/RenderingDefs.h \
  Services/RenderingOptions.h \
  Services/RenderingService.h \
  Services/ServerAdmin.h \
  Services/ServerAdminDefs.h \
  Services/ServerConnection.h \
  Services/ServerConnectionImp.h \
  Services/ServerConnectionPool.h \
  Services/ServerConnectionStack.h \
  Services/ServerInformation.h \
  Services/Site.h \
  Services/SiteManager.h \
  Services/SiteInfo.h \
  Services/SiteConnection.h \
  Services/TileDefs.h \
  Services/TileService.h \
  Services/UnitType.h \
  System/ConfigProperties.h \
  System/MapGuideCommonClassId.h \
  System/MapGuideStream.h \
  System/UserInformation.h  \
  System/CryptographyManager.h \
  Util/IpUtil.h

INCLUDES = \
  -I../PlatformBase \
  -I../System \
  -I../CoordinateSystem \
  -I../Security \
  -I../MdfParser \
  -I../MdfModel \
  -I../Foundation \
  -I../Geometry \
  -I../../Oem/ACE/ACE_wrappers \
  -I../../Oem/geos-2.2.0/source/headers \
  -I../../Oem/dbxml-2.3.10/xerces-c-src/src

libMgMapGuideCommon_la_LIBADD = \
  -lACE \
  -lMgMdfParser \
  -lMgMdfModel \
  -lMgPlatformBase \
  -lMgFoundation \
  -lMgGeometry \
  -lMgSecurity

libMgMapGuideCommon_la_LDFLAGS = -version-info 7:0:0 \
  -L../../Oem/ACE/ACE_wrappers/ace \
  -L../PlatformBase \
  -L../Foundation \
  -L../Geometry \
  -L../Security \
  -L../MdfParser \
  -L../MdfModel 
  
