AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = MdfModel.vcproj MdfModel.rc

lib_LTLIBRARIES = libMgMdfModel.la

libMgMdfModel_la_SOURCES = \
  AreaRule.cpp \
  AreaSymbolization2D.cpp \
  AreaTypeStyle.cpp \
  AttributeRelate.cpp \
  BaseMapLayer.cpp \
  BaseMapLayerGroup.cpp \
  BlockSymbol.cpp \
  Box2D.cpp \
  CalculatedProperty.cpp \
  ChannelBand.cpp \
  ConvertUTF.c \
  DisplayScale.cpp \
  DrawingLayerDefinition.cpp \
  Extension.cpp \
  FeatureSource.cpp \
  FeatureTypeStyle.cpp \
  Fill.cpp \
  FontSymbol.cpp \
  GridColor.cpp \
  GridColorRule.cpp \
  GridColorStyle.cpp \
  GridLayerDefinition.cpp \
  GridScaleRange.cpp \
  GridSurfaceStyle.cpp \
  HillShade.cpp \
  ImageSymbol.cpp \
  Label.cpp \
  LayerDefinition.cpp \
  LengthConverter.cpp \
  LineRule.cpp \
  LineSymbolization2D.cpp \
  LineTypeStyle.cpp \
  MapDefinition.cpp \
  MapLayer.cpp \
  MapLayerGroup.cpp \
  MapLayerGroupCommon.cpp \
  MarkSymbol.cpp \
  MdfModel.cpp \
  NameStringPair.cpp \
  PointRule.cpp \
  PointSymbolization2D.cpp \
  PointTypeStyle.cpp \
  RelateProperty.cpp \
  Rule.cpp \
  Stroke.cpp \
  SupplementalSpatialContextInfo.cpp \
  Symbol.cpp \
  Symbolization.cpp \
  TextSymbol.cpp \
  UnicodeString.cpp \
  Vector.cpp \
  VectorLayerDefinition.cpp \
  VectorScaleRange.cpp \
  W2DSymbol.cpp

noinst_HEADERS = \
  AreaRule.h \
  AreaSymbolization2D.h \
  AreaTypeStyle.h \
  AttributeRelate.h \
  Base64.h \
  BaseMapLayer.h \
  BaseMapLayerGroup.h \
  BlockSymbol.h \
  Box2D.h \
  CalculatedProperty.h \
  ChannelBand.h \
  ConvertUTF.h \
  DisplayScale.h \
  DrawingLayerDefinition.h \
  Extension.h \
  FeatureSource.h \
  FeatureTypeStyle.h \
  Fill.h \
  FontSymbol.h \
  GridColor.h \
  GridColorRule.h \
  GridColorStyle.h \
  GridLayerDefinition.h \
  GridScaleRange.h \
  GridSurfaceStyle.h \
  HillShade.h \
  IFeatureTypeStyleVisitor.h \
  ISymbolVisitor.h \
  ISymbolizationVisitor.h \
  ImageSymbol.h \
  Label.h \
  LayerDefinition.h \
  LengthConverter.h \
  LineRule.h \
  LineSymbolization2D.h \
  LineTypeStyle.h \
  MapDefinition.h \
  MapLayer.h \
  MapLayerGroup.h \
  MapLayerGroupCommon.h \
  MarkSymbol.h \
  MdfModel.h \
  MdfOwnerCollection.h \
  NameStringPair.h \
  PointRule.h \
  PointSymbolization2D.h \
  PointTypeStyle.h \
  RelateProperty.h \
  Rule.h \
  SizeContexts.h \
  Stroke.h \
  SupplementalSpatialContextInfo.h \
  Symbol.h \
  Symbolization.h \
  TextSymbol.h \
  UnicodeString.h \
  Vector.h \
  VectorLayerDefinition.h \
  VectorScaleRange.h \
  W2DSymbol.h \
  stdafx.h

libMgMdfModel_la_LDFLAGS = -version-info 7:0:0
