AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = PlatformBase.vcproj PlatformBase.rc

lib_LTLIBRARIES = libMgPlatformBase.la

libMgPlatformBase_la_SOURCES = \
  PlatformBaseBuild.cpp

include_SOURCES = \
  Data/BlobProperty.cpp \
  Data/BooleanProperty.cpp \
  Data/ByteProperty.cpp \
  Data/ClobProperty.cpp\
  Data/Color.cpp \
  Data/DateTimeProperty.cpp \
  Data/DoubleProperty.cpp \
  Data/Int16Property.cpp \
  Data/Int32Property.cpp \
  Data/Int64Property.cpp \
  Data/IntCollection.cpp \
  Data/Point3D.cpp \
  Data/PropertyDefinitionCollection.cpp \
  Data/SerializableCollection.cpp \
  Data/SingleProperty.cpp \
  Data/StringPropertyCollection.cpp \
  Data/Vector3D.cpp \
  Exception/ArrayTypeMismatchException.cpp \
  Exception/DuplicateResourceDataException.cpp \
  Exception/DuplicateResourceException.cpp \
  Exception/EmptyFeatureSetException.cpp \
  Exception/FdoException.cpp \
  Exception/FeatureServiceException.cpp \
  Exception/InvalidLayerDefinitionException.cpp \
  Exception/InvalidMapDefinitionException.cpp \
  Exception/InvalidRepositoryNameException.cpp \
  Exception/InvalidRepositoryTypeException.cpp \
  Exception/InvalidResourceDataNameException.cpp \
  Exception/InvalidResourceDataTypeException.cpp \
  Exception/InvalidResourceNameException.cpp \
  Exception/InvalidResourcePathException.cpp \
  Exception/InvalidResourcePreProcessingTypeException.cpp \
  Exception/InvalidResourceTypeException.cpp \
  Exception/InvalidSymbolDefinitionException.cpp \
  Exception/LayerNotFoundException.cpp \
  Exception/ResourceBusyException.cpp \
  Exception/ResourceDataNotFoundException.cpp \
  Exception/ResourceNotFoundException.cpp \
  Exception/ServiceNotAvailableException.cpp \
  Exception/ServiceNotSupportedException.cpp \
  Exception/UserNotFoundException.cpp \
  MapLayer/ChangeList.cpp \
  MapLayer/LayerBase.cpp \
  MapLayer/LayerCollection.cpp \
  MapLayer/LayerGroup.cpp \
  MapLayer/LayerGroupCollection.cpp \
  MapLayer/MapBase.cpp \
  MapLayer/MapCollection.cpp \
  MapLayer/ObjectChange.cpp \
  MapLayer/ReadOnlyLayerCollection.cpp \
  MapLayer/SelectionBase.cpp \
  Services/BaseServiceDefs.cpp \
  Services/ClassDefinition.cpp \
  Services/ClassDefinitionCollection.cpp \
  Services/CreateSdfParams.cpp \
  Services/DataPropertyDefinition.cpp \
  Services/DataReader.cpp \
  Services/DeleteFeatures.cpp \
  Services/FeatureAggregateOptions.cpp \
  Services/FeatureCommandCollection.cpp \
  Services/FeatureDefs.cpp \
  Services/FeatureProperty.cpp \
  Services/FeatureQueryOptions.cpp \
  Services/FeatureReader.cpp \
  Services/FeatureSchema.cpp \
  Services/FeatureSchemaCollection.cpp \
  Services/FeatureService.cpp \
  Services/FeatureSet.cpp \
  Services/FeatureSourceParams.cpp \
  Services/FileFeatureSourceParams.cpp \
  Services/GeometricPropertyDefinition.cpp \
  Services/GeometryProperty.cpp \
  Services/GeometryTypeInfo.cpp \
  Services/InsertFeatures.cpp \
  Services/LockFeatures.cpp \
  Services/LongTransactionData.cpp \
  Services/LongTransactionReader.cpp \
  Services/ObjectPropertyDefinition.cpp \
  Services/Parameter.cpp \
  Services/ParameterCollection.cpp \
  Services/Raster.cpp \
  Services/RasterProperty.cpp \
  Services/RasterPropertyDefinition.cpp \
  Services/RasterTypes.cpp \
  Services/Resource.cpp \
  Services/ResourceDefs.cpp \
  Services/ResourceIdentifier.cpp \
  Services/ResourceService.cpp \
  Services/Service.cpp \
  Services/ServiceRegistry.cpp \
  Services/SpatialContextData.cpp \
  Services/SpatialContextReader.cpp \
  Services/SqlDataReader.cpp \
  Services/Transaction.cpp \
  Services/UnlockFeatures.cpp \
  Services/UpdateFeatures.cpp \
  Services/Warnings.cpp \
  Services/PrintLayoutService/MapView.cpp \
  Services/PrintLayoutService/MapViewportBase.cpp \
  Services/PrintLayoutService/PrintLayoutBase.cpp \
  Services/PrintLayoutService/PrintLayoutDefs.cpp \
  Services/PrintLayoutService/PrintLayoutElementBase.cpp \
  Services/PrintLayoutService/PrintLayoutElementCollection.cpp \
  Services/PrintLayoutService/PrintLayoutElementFactoryBase.cpp \
  Services/PrintLayoutService/PrintLayoutServiceBase.cpp \
  Services/PrintLayoutService/PropertyMapping.cpp \
  Services/PrintLayoutService/PropertyMappingCollection.cpp

noinst_HEADERS = $(include_SOURCES) \
  PlatformBase.h \
  Data/BlobProperty.h \
  Data/BooleanProperty.h \
  Data/ByteProperty.h \
  Data/ClobProperty.h \
  Data/Color.h \
  Data/DateTimeProperty.h \
  Data/DoubleProperty.h \
  Data/Int16Property.h \
  Data/Int32Property.h \
  Data/Int64Property.h \
  Data/IntCollection.h \
  Data/Point3D.h \
  Data/PropertyDefinitionCollection.h \
  Data/SerializableCollection.h \
  Data/SingleProperty.h \
  Data/StringPropertyCollection.h \
  Data/Vector3D.h \
  Exception/ArrayTypeMismatchException.h \
  Exception/DuplicateResourceDataException.h \
  Exception/DuplicateResourceException.h \
  Exception/EmptyFeatureSetException.h \
  Exception/FdoException.h \
  Exception/FeatureServiceException.h \
  Exception/InvalidLayerDefinitionException.h \
  Exception/InvalidMapDefinitionException.h \
  Exception/InvalidRepositoryNameException.h \
  Exception/InvalidRepositoryTypeException.h \
  Exception/InvalidResourceDataNameException.h \
  Exception/InvalidResourceDataTypeException.h \
  Exception/InvalidResourceNameException.h \
  Exception/InvalidResourcePathException.h \
  Exception/InvalidResourcePreProcessingTypeException.h \
  Exception/InvalidResourceTypeException.h \
  Exception/InvalidSymbolDefinitionException.h \
  Exception/LayerNotFoundException.h \
  Exception/ResourceBusyException.h \
  Exception/ResourceDataNotFoundException.h \
  Exception/ResourceNotFoundException.h \
  Exception/ServiceNotAvailableException.h \
  Exception/ServiceNotSupportedException.h \
  Exception/UserNotFoundException.h \
  MapLayer/ChangeList.h \
  MapLayer/LayerBase.h \
  MapLayer/LayerCollection.h \
  MapLayer/LayerGroup.h \
  MapLayer/LayerGroupCollection.h \
  MapLayer/LayerGroupType.h \
  MapLayer/LayerType.h \
  MapLayer/MapBase.h \
  MapLayer/MapCollection.h \
  MapLayer/ObjectChange.h \
  MapLayer/ReadOnlyLayerCollection.h \
  MapLayer/SelectionBase.h \
  Services/BaseService.h \
  Services/BaseServiceDefs.h \
  Services/ClassDefinition.h \
  Services/ClassDefinitionCollection.h \
  Services/CreateSdfParams.h \
  Services/DataPropertyDefinition.h \
  Services/DataReader.h \
  Services/DeleteFeatures.h \
  Services/FeatureAggregateOptions.h \
  Services/FeatureCommand.h \
  Services/FeatureCommandCollection.h \
  Services/FeatureCommandType.h \
  Services/FeatureDefs.h \
  Services/FeatureGeometricType.h \
  Services/FeatureProperty.h \
  Services/FeatureQueryOptions.h \
  Services/FeatureReader.h \
  Services/FeatureSchema.h \
  Services/FeatureSchemaCollection.h \
  Services/FeatureService.h \
  Services/FeatureServiceCommon.h \
  Services/FeatureSet.h \
  Services/FeatureSourceParams.h \
  Services/FeatureSpatialOperations.h \
  Services/FileFeatureSourceParams.h \
  Services/GeometricPropertyDefinition.h \
  Services/GeometryProperty.h \
  Services/GeometryTypeInfo.h \
  Services/GwsFeatureReader.h \
  Services/InsertFeatures.h \
  Services/LockFeatures.h \
  Services/LongTransactionData.h \
  Services/LongTransactionReader.h \
  Services/ObjectPropertyDefinition.h \
  Services/ObjectPropertyType.h \
  Services/OrderingOption.h \
  Services/ParameterDirection.h \
  Services/Parameter.h \
  Services/ParameterCollection.h \
  Services/PlatformBaseClassId.h \
  Services/Raster.h \
  Services/RasterProperty.h \
  Services/RasterPropertyDefinition.h \
  Services/RasterTypes.h \
  Services/Reader.h \
  Services/ReaderType.h \
  Services/Resource.h \
  Services/ResourceDefs.h \
  Services/ResourceIdentifier.h \
  Services/ResourceService.h \
  Services/Service.h \
  Services/ServiceRegistry.h \
  Services/SpatialContextData.h \
  Services/SpatialContextExtentType.h \
  Services/SpatialContextReader.h \
  Services/SqlDataReader.h \
  Services/Transaction.h \
  Services/UnlockFeatures.h \
  Services/UpdateFeatures.h \
  Services/Warnings.h \
  Services/PrintLayoutService/MapView.h \
  Services/PrintLayoutService/MapViewportBase.h \
  Services/PrintLayoutService/PrintLayoutBase.h \
  Services/PrintLayoutService/PrintLayoutDefs.h \
  Services/PrintLayoutService/PrintLayoutElementBase.h \
  Services/PrintLayoutService/PrintLayoutElementCollection.h \
  Services/PrintLayoutService/PrintLayoutElementFactoryBase.h \
  Services/PrintLayoutService/PrintLayoutServiceBase.h \
  Services/PrintLayoutService/PropertyMapping.h \
  Services/PrintLayoutService/PropertyMappingCollection.h

INCLUDES = \
  -I../CoordinateSystem \
  -I../Security \
  -I../MdfParser \
  -I../MdfModel \
  -I../Foundation \
  -I../Geometry \
  -I../../Oem/ACE/ACE_wrappers \
  -I../../Oem/geos-2.2.0/source/headers \
  -I../../Oem/dbxml-2.3.10/xerces-c-src/src

libMgPlatformBase_la_LIBADD = \
  -lACE \
  -lMgMdfModel \
  -lMgMdfParser \
  -lMgFoundation \
  -lMgGeometry

libMgPlatformBase_la_LDFLAGS = -release $(PACKAGE_VERSION) \
  -L../../Oem/ACE/ACE_wrappers/ace \
  -L../Foundation \
  -L../Geometry \
  -L../../Common/CoordinateSystem \
  -L../MdfParser \
  -L../MdfModel
